[package]
name = "eth-block-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Alloy 依赖
alloy-provider = "0.8"
alloy-rpc-types-eth = "0.8"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# JSON 处理
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"

# 进度条
indicatif = "0.17"
hex = "0.4"
revm = { git = "https://github.com/risechain/revm", rev = "ac75f1ef59ecae15238f5a2e94e71c3bcc01d45c", features = [
  "serde",
] }
revme = { git = "https://github.com/risechain/revm", rev = "ac75f1ef59ecae15238f5a2e94e71c3bcc01d45c" }
alloy-consensus = "0.9.2"
alloy-primitives = "0.8"